chore: arranged functional tests for inventory page and added UI-level tests

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "loginpage-ui": "npx playwright test tests/ui-validation/login-ui.spec.ts",
     "loginpage-test": "npx playwright test tests/features/login.spec.ts",
-    "inventorypage-test": "npx playwright test tests/features/inventory.spec.ts --ui"
+    "inventorypage-test": "npx playwright test tests/features/inventory.spec.ts --ui",
+    "inventorypage-ui": "npx playwright test tests/ui-validation/inventory-ui.spec.ts --ui"
   },
   "repository": {
     "type": "git",
