--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "loginpage-ui": "npx playwright test tests/ui-validation/login-ui.spec.ts",
     "loginpage-test": "npx playwright test tests/features/login.spec.ts",
     "inventorypage-test": "npx playwright test tests/features/inventory.spec.ts --ui",
-    "inventorypage-ui": "npx playwright test tests/ui-validation/inventory-ui.spec.ts --ui"
+    "inventorypage-ui": "npx playwright test tests/ui-validation/inventory-ui.spec.ts"
   },
   "repository": {
     "type": "git",
