--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "loginpage-ui": "npx playwright test tests/ui-validation/login-ui.spec.ts",
     "loginpage-test": "npx playwright test tests/features/login.spec.ts",
-    "inventorypage-test": "npx playwright test tests/features/inventory.spec.ts --ui",
-    "inventorypage-ui": "npx playwright test tests/ui-validation/inventory-ui.spec.ts --ui",
+    "inventorypage-test": "npx playwright test tests/features/inventory.spec.ts",
+    "inventorypage-ui": "npx playwright test tests/ui-validation/inventory-ui.spec.ts",
     "performance-test": "npx playwright test tests/features/performance.spec.ts"
   },
   "repository": {
@@ -27,6 +27,8 @@
     "@playwright/test": "^1.55.1",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.5.2",
+    "allure-commandline": "^2.34.1",
+    "allure-playwright": "^3.4.2",
     "chrome-launcher": "^1.2.1",
     "dotenv": "^16.6.1",
     "js-yaml": "^4.1.0",
